--- a/app/assets/stylesheets/_booking_request_form.scss
+++ b/app/assets/stylesheets/_booking_request_form.scss
@@ -12,8 +12,9 @@
         border: solid thin red;
     }
 
-    & &__book-button {
-        width: 100%
+    &__book-button {
+        padding-left: $standard-spacing * 2;
+        padding-right: $standard-spacing * 2;
     }
 
     &__heart {
