--- a/app/assets/stylesheets/_avatars.scss
+++ b/app/assets/stylesheets/_avatars.scss
@@ -11,6 +11,7 @@ $avatar-tiny-size: 33px;
     width: 80px;
     height: 80px;
     border: solid 3px white;
+    background-color: $color-background;
 }
 
 .avatar--huge {
