Added backstage controller and index page and page for setting broadcast message

--- a/app/views/application/_broadcast.html.erb
+++ b/app/views/application/_broadcast.html.erb
@@ -2,7 +2,7 @@
     <div class="flash-bar flash-bar--broadcast">
         <div class="container">
             <% if broadcast_html %>
-                <%= html_safe broadcast_html %>
+                <%= broadcast_html.html_safe %>
             <% end %>
         </div>
     </div>
