Added views for selecting a KYC document to review

--- a/app/views/backstage/index.html.erb
+++ b/app/views/backstage/index.html.erb
@@ -16,6 +16,10 @@
                     <th>Ads pending review:</th>
                     <td><%= @pending_ads_cnt %></td>
                 </tr>
+                <tr>
+                    <th>KYC docs pending review:</th>
+                    <td><%= @pending_kyc_cnt %></td>
+                </tr>
             </table>
 
             <hr>
@@ -25,6 +29,7 @@
                 <li><%= link_to 'Health check', ok_computer_path %> - Service health</li>
                 <li><%= link_to 'Broadcast', broadcast_path %> - Change broadcast message</li>
                 <li><%= link_to 'Pending ads', pending_ad_reviews_path %> - Review submitted ads</li>
+                <li><%= link_to 'Pending KYC', pending_kyc_reviews_path %> - Review submitted documents</li>
             </ul>
 
         </div>
