--- a/app/views/backstage/pending_kyc_reviews.html.erb
+++ b/app/views/backstage/pending_kyc_reviews.html.erb
@@ -5,9 +5,9 @@
 
             <div class="u-push-down">
                 <ul>
-                    <% @documents.each do |doc| %>
+                    <% @user_documents.each do |doc| %>
                         <li>
-                            <%= link_to "#{doc.user.display_name}: #{doc.display_category}", '#' %>
+                            <%= link_to "#{doc.user.display_name}: #{doc.display_category}", kyc_document_path(doc) %>
                         </li>
                     <% end %>
                 </ul>
