--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -1,10 +1,9 @@
 <%
    # fixme: this is a bit eew. We need to figure out better how to work with ES results
-   ad = AdDecorator.new(ad)
+   ad = ad.decorate
 %>
 
-
-<div class="my-ads">
+<%= link_to ad, class: 'my-ads' do %>
     <div class="my-ads__img-box">
         <%= image_tag ad.safe_image_url(:thumb), size: '90x60', alt: '' %>
     </div>
@@ -16,15 +15,5 @@
         <div class="my-ads__status">
             <%= status_label ad %>
         </div>
-        <div class="controls">
-            <% if ad.is_deletable? %>
-                <%= button_to "Slett", users_ad_path(ad), method: :delete, class: "button", form_class: "u-inline" %>
-            <% else %>
-                <%= button_to "Deaktiver", users_ad_path(ad), method: :delete, class: "button", form_class: "u-inline" %>
-                <small>Historikk for utleie, samt tilbakemeldinger på utleie, vil fortsatt være tilgjengelig.</small>
-            <% end %>
-
-            <%= link_to "Endre tilgjengelighet", edit_availability_ad_path(ad), class: 'button' %>
-        </div>
     </div>
-  </div>
+<% end %>
