--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -29,7 +29,7 @@
                     <div class="row">
                         <div class="one-third column">
                             <%= f.label :first_name, "Fornavn:" %>
-                            <%= f.text_field :first_name, autofocus: true, class: 'u-full-width'  %>
+                            <%= f.text_field :first_name, class: 'u-full-width'  %>
                         </div>
                     </div>
 
