Added nested price fields

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -34,6 +34,10 @@
         </div>
     </div>
 
+    <div class="u-push-down">
+        <%= render partial: 'price_editor', locals: {f: f} %>
+    </div>
+
     <label class="u-push-down">
 
     <%# insurance is only optional in category 'bap' %>
