--- a/app/views/ads/_price_editor.html.erb
+++ b/app/views/ads/_price_editor.html.erb
@@ -3,17 +3,21 @@
         <%= f.nested_fields_for :price_rules do |rule| %>
             <div>
                 <% if rule.object.required? %>
-                    Pris per døgn: <%= rule.text_field :amount_in_h %>
+                    Pris per døgn: <%= rule.text_field :amount_in_h, size: 8, class: 'price-editor__price-input' %>
                 <% else %>
                     Pris per dag over
                     <%= rule.hidden_field :unit, value: 'day'  %>
                     <%= rule.text_field :effective_from_unit, size: 3 %>
                     dager, kr.
-                    <%= rule.text_field :amount_in_h, size: 8 %>
-                    <%= rule.remove_nested_fields_link 'Slett', class: 'button', role: 'button' %>
+                    <%= rule.text_field :amount_in_h, size: 8, class: 'price-editor__price-input' %>
+                    <br>
+                    <%= rule.remove_nested_fields_link 'Slett', class: 'u-pull-right' %>
                 <% end %>
             </div>
         <% end %>
-        <div><%= f.add_nested_fields_link :price_rules %></div>
+        <hr>
+        <%= f.add_nested_fields_link :price_rules do %>
+            <%= icon 'plus', class: 'fa-lg' %> Legg til prisalternativ for dager.
+        <% end %>
     </div>
 </div>
