Cleaning up form markup and moving fields around, least complex first

--- a/app/views/ads/_price_editor.html.erb
+++ b/app/views/ads/_price_editor.html.erb
@@ -15,7 +15,7 @@
                 <% end %>
             </div>
         <% end %>
-        <hr>
+        <hr class="price-editor__ruler">
         <%= f.add_nested_fields_link :price_rules do %>
             <%= icon 'plus', class: 'fa-lg' %> Legg til prisalternativ for dager.
         <% end %>
