--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -17,97 +17,102 @@
     <h5>this Ad has the following category: <b><%= @ad.category %></b></h5>
     -->
 
-    <label>Overskrift:</label>
-    <%= f.text_field :title, class: 'u-full-width' %>
+    <div class="u-push-down">
+        <%= f.label :title, 'Tittel:', class: 'u-full-width' %>
+        <%= f.text_field :title, class: 'u-full-width' %>
+    </div>
 
-    <label class="u-full-width">Pris:</label>
+    <div class="u-push-down">
+        <%= f.label :body, 'Beskrivelse:' %>
+        <%= f.text_area :body, class: 'u-full-width', data: { controller: 'autoSizeTextArea' } %>
+        <small>Viste du: Du kan bruke #hashtags i annonsen din. Det gjør det enklere å finne den i søket.</small>
+    </div>
 
+    <div class="u-push-down-only">
+        <label>Henteadresse:</label>
 
-    <label class="u-push-down">
+        <%- if @ad.user.locations.length > 0 -%>
 
-    <%# insurance is only optional in category 'bap' %>
-    <% if @ad.category == 'bap' %>
-        <%= f.check_box :insurance_required, data: {insurance: ''} %>
-    <%# else %>
-    <% end %>
+            <div data-controller="addressSelectionDimmer">
+                <%= hidden_field_tag "create_new_location", "0" %>
+
+                <%= select( :ad, :location_id,
+                            @ad.user.locations.map{ |l| ["#{l.address_line}, #{l.post_code} #{l.city}", l.id] },
+                            {},
+                            { class: 'u-full-width' } ) %>
+
+                <details>
+                    <summary class="u-default-summary">Skriv inn en annen adresse:</summary>
+                    <div>
+
+                        <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
+                            <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
+                            <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
+                                <div class="four columns">
+                                    <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
+                                </div>
+                                <div class="eight columns">
+                                    <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
+                                </div>
+                            </div>
+                        <% end %>
+
+                    </div>
+                </details>
+            </div>
+
+        <% else %>
+
+            <div>
+                <%= hidden_field_tag "create_new_location", "1" %>
+
+                <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
+                    <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
+                    <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
+                        <div class="four columns">
+                            <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
+                        </div>
+                        <div class="eight columns">
+                            <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
+                        </div>
+                    </div>
+                <% end %>
+
+            </div>
+
+        <% end %>
+    </div>
+
+    <label class="u-push-down-only">Forsikring:</label>
+
+    <% if @ad.is_insurance_required? %>
+        <p>
+            Leietaker må tegne <%= link_to 'forsikring', Rails.configuration.x.customerservice.insurance_info %>
+            for gjenstander av denne typen.
+        </p>
+    <% else %>
         <span>
-            Leietaker må tegne <%= link_to 'forsikring', Rails.configuration.x.customerservice.insurance_info %> for å leie gjenstanden.
+            <%= f.check_box :insurance_required, data: {insurance: ''} %>
+            Leietaker må tegne <%= link_to 'forsikring', Rails.configuration.x.customerservice.insurance_info %>
+            for gjenstanden.
         </span>
-    </label>
+    <% end %>
 
+    <label class="u-full-width u-push-down-only">Pris:</label>
 
     <div class="u-push-down">
         <%= render partial: 'price_editor', locals: {f: f} %>
     </div>
 
 
-    <label class="u-push-down-only">
-        Henteadresse:
-    </label>
-
-    <%- if @ad.user.locations.length > 0 -%>
-
-        <div data-controller="addressSelectionDimmer">
-            <%= hidden_field_tag "create_new_location", "0" %>
-
-            <%= select( :ad, :location_id,
-                        @ad.user.locations.map{ |l| ["#{l.address_line}, #{l.post_code} #{l.city}", l.id] },
-                        {},
-                        { class: 'u-full-width' } ) %>
-
-            <details>
-                <summary class="u-default-summary">Skriv inn en annen adresse:</summary>
-                <div>
-
-                    <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
-                        <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
-                        <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
-                            <div class="four columns">
-                                <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
-                            </div>
-                            <div class="eight columns">
-                                <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
-                            </div>
-                        </div>
-                    <% end %>
-
-                </div>
-            </details>
-        </div>
-
-    <% else %>
-
-        <div>
-            <%= hidden_field_tag "create_new_location", "1" %>
-
-            <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
-                <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
-                <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
-                    <div class="four columns">
-                        <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
-                    </div>
-                    <div class="eight columns">
-                        <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
-                    </div>
-                </div>
-            <% end %>
-
-        </div>
-
-    <% end %>
 
     <% if @ad.category == 'motor' %>
-    <div class="u-push-down">
-        <label>Registreringsnummer:</label>
-        <%= f.text_field :registration_number, class: 'u-full-width', placeholder: "Regnr" %>
-    </div>
+        <div class="u-push-down">
+            <label>Registreringsnummer:</label>
+            <%= f.text_field :registration_number, class: 'u-full-width', placeholder: "Regnr" %>
+        </div>
     <% end %>
 
-    <div class="u-push-down">
-        <label>Beskrivelse:</label>
-        <%= f.text_area :body, class: 'u-full-width', data: { controller: 'autoSizeTextArea' } %>
-        <small>Viste du: Du kan bruke #hashtags i annonsen din. Det gjør det enklere å finne den i søket.</small>
-    </div>
 
 <%- end -%>
 
