--- a/app/views/ads/_price_input_estimate.html.erb
+++ b/app/views/ads/_price_input_estimate.html.erb
@@ -1,14 +1,11 @@
 <%
-    calc = BookingCalculator.new
-    calc.ad = @ad
-    #calc.unit = 'day' # doesn't matter what it is, getting nums for 1
-    #calc.duration_in_unit = 1
+    calc = @ad.booking_calculator
 %>
 
 <% if rule.id.present? %>
     <div class="price-estimate">
         <div class="price-estimate__inner">
-            <label class="price-estimate__label">Pris</label>
+            <label class="price-estimate__label">Pris for kunde</label>
             <span class="price-estimate__value"><%= number_to_currency_pretty rule.payin_amount_in_h %></span>
             <br>
 
