--- a/app/views/ads/_price_input_estimate.html.erb
+++ b/app/views/ads/_price_input_estimate.html.erb
@@ -6,15 +6,15 @@
     <div class="price-estimate">
         <div class="price-estimate__inner">
             <label class="price-estimate__label">Pris for kunde:</label>
-            <span class="price-estimate__value"><%= number_to_currency_pretty rule.payin_amount_in_h %></span>
+            <span class="price-estimate__value"><%= number_to_currency_pretty( integer_to_decimal( rule.payin_amount ) ) %></span>
             <br>
 
             <label class="price-estimate__label">Leiegebyr / forsikring:</label>
-            <span class="price-estimate__value"><%= number_to_currency_pretty( ( calc.platform_fee(rule) + calc.insurance_fee(rule) ) / 100) %></span>
+            <span class="price-estimate__value"><%= number_to_currency_pretty( integer_to_decimal( calc.total_fee(rule) ) ) %></span>
             <br>
 
             <label class="price-estimate__label">Utbetalt til deg:</label>
-            <span class="price-estimate__value"><%= number_to_currency_pretty( calc.payout_amount(rule) / 100) %></span>
+            <span class="price-estimate__value"><%= number_to_currency_pretty( integer_to_decimal( calc.payout_amount(rule) ) ) %></span>
         </div>
     </div>
 <% end %>
