--- a/app/views/ads/_price_input_estimate.html.erb
+++ b/app/views/ads/_price_input_estimate.html.erb
@@ -6,7 +6,7 @@
     <div class="price-estimate">
         <div class="price-estimate__inner">
             <label class="price-estimate__label">Pris for kunde:</label>
-            <span class="price-estimate__value"><%= number_to_currency_pretty( integer_to_decimal( rule.payin_amount ) ) %></span>
+            <span class="price-estimate__value"><%= number_to_currency_pretty( integer_to_decimal( rule.payin_amount(rule) ) ) %></span>
             <br>
 
             <label class="price-estimate__label">Leiegebyr / forsikring:</label>
