--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@ad, url: (users_ad_path @ad), data: {main_form: '', controller: 'payoutFetcher', category: @ad.category, price_url: renter_price_estimate_path}) do |f| %>
+<%= form_for(@ad, url: (users_ad_path @ad), data: {main_form: '', category: @ad.category}) do |f| %>
     <% if @ad.errors.any? %>
         <div id="error_explanation">
             <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
