--- a/app/views/ads/_price_editor.html.erb
+++ b/app/views/ads/_price_editor.html.erb
@@ -1,21 +1,22 @@
-<div class="price-editor">
-    <div>
-        <strong>Insurance and payout is wrong while we refactor calc stuff</strong>
-    </div>
+<div class="price-editor" data-controller="priceEstimateUpdater" data-estimates-url="<%= payout_estimates_ad_path @ad %>">
     <%= f.nested_fields_for :payin_rules do |ff| %>
-        <div class="price-editor__row">
-            <% if ff.object.required? %>
-                Pris per døgn: <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input' %>
-            <% else %>
-                Pris per dag ved
-                <%= ff.hidden_field :unit, value: 'day'  %>
-                <%= ff.text_field :effective_from, size: 3 %>
-                og fler dager:
-                <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input' %>
-                <%= ff.remove_nested_fields_link 'Slett', class: 'u-pull-right' %>
-            <% end %>
+        <div data-payin-rule>
+            <div class="price-editor__row">
+                <% if ff.object.required? %>
+                    Pris per døgn: <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input', data: { price: '' } %>
+                <% else %>
+                    Pris per dag ved
+                    <%= ff.hidden_field :unit, value: 'day'  %>
+                    <%= ff.text_field :effective_from, size: 3 %>
+                    og fler dager:
+                    <%= ff.text_field :payin_amount_in_h, size: 8, class: 'price-editor__price-input', data: { price: '' } %>
+                    <%= ff.remove_nested_fields_link 'Slett', class: 'u-pull-right' %>
+                <% end %>
+            </div>
+            <div data-estimate-holder>
+                <%= render partial: 'price_input_estimate', locals: { rule: ff.object } %>
+            </div>
         </div>
-            <%= render partial: 'price_input_estimate', locals: { rule: ff.object } %>
     <% end %>
     <hr class="price-editor__ruler">
     <%= f.add_nested_fields_link :payin_rules do %>
