Commented out the copy section in ad input, to see how it looks

--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -5,7 +5,7 @@
         </div>
 
         <div class="four columns offset-by-one column">
-            <%= render partial: "ad_input_copy" %>
+            <%#= render partial: "ad_input_copy" %>
         </div>
     </div>
 </div>
