--- a/app/views/ads/_price_input_estimate.html.erb
+++ b/app/views/ads/_price_input_estimate.html.erb
@@ -8,8 +8,13 @@
             <span class="price-estimate__value"><%= format_monetary_full( calc.payin_amount(rule) ) %></span>
             <br>
 
-            <label class="price-estimate__label">Leiegebyr / forsikring:</label>
-            <span class="price-estimate__value"><%= format_monetary_full( calc.total_fee(rule) ) %></span>
+            <% if @ad.insurance_required %>
+                <label class="price-estimate__label">Leiegebyr med forsikring:</label>
+            <% else %>
+                <label class="price-estimate__label">Leiegebyr:</label>
+            <% end %>
+
+                <span class="price-estimate__value"><%= format_monetary_full( calc.total_fee(rule) ) %></span>
             <br>
 
             <label class="price-estimate__label">Utbetalt til deg:</label>
