significant improvement to mangopay support. - lots of clean ups - fix some tests - better error reporting on creditcard / bankaccount registration failures - probably lots of other things

--- a/app/views/users/_show_user_payment_account.html.erb
+++ b/app/views/users/_show_user_payment_account.html.erb
@@ -1,6 +1,15 @@
 <%= render layout: "gray_box", locals: {title: "Kontonummer", id: "kontonummer"} do %>
 
 <%- if @user.mangopay_provisionable? -%>
+
+    <%- if payment_account_notice -%>
+    <div class="row">
+        <div class="eight columns">
+            <%= payment_account_notice %>
+        </div>
+    </div>
+    <%- end -%>
+
     <div class="row">
         <div class="eight columns">
           bank_account_number:
