--- a/app/views/user_payment_cards/_list.html.erb
+++ b/app/views/user_payment_cards/_list.html.erb
@@ -1,6 +1,11 @@
 
 <%= render layout: "gray_box", locals: {title: "Dine Betalingskort", id: "betalingskort"} do %>
 
+  <%- if payment_card_notice -%>
+    <div><%= payment_card_notice %> </div>
+    <hr>
+  <%- end -%>
+
   <table>
     <tbody>
       <%= render @user_payment_cards %>
