--- a/app/views/user_payment_cards/_user_payment_card.html.erb
+++ b/app/views/user_payment_cards/_user_payment_card.html.erb
@@ -8,9 +8,8 @@
     <% else %>
       <%= icon 'credit-card', class: "fa-lg" %>
     <% end %>
-    <%# FIXME: move prettifying code to decorator %>
-  <td><%= user_payment_card.number_alias.scan(/.{4}/).join(" ") %></td>
-  <td><%= user_payment_card.expiration_date.scan(/.{2}/).join("/") %></td>
+  <td><%= user_payment_card.decorate.pretty_number_alias %></td>
+  <td><%= user_payment_card.decorate.expiration_date %></td>
   <td>
     <%# make_favorite %>
     <% if user_payment_card.favorite %>
