add resque and resque-web, and hook up to backstage

--- a/app/views/backstage/index.html.erb
+++ b/app/views/backstage/index.html.erb
@@ -27,6 +27,7 @@
             <ul>
                 <li><%= link_to 'ActiveAdmin', admin_root_path %> - Go to model admin UI</li>
                 <li><%= link_to 'Health check', ok_computer_path %> - Service health</li>
+                <li><%= link_to 'Resque overview', resque_web_path %> - Service health</li>
                 <li><%= link_to 'Broadcast', broadcast_path %> - Change broadcast message</li>
                 <li><%= link_to 'Pending ads', pending_ad_reviews_path %> - Review submitted ads</li>
                 <li><%= link_to 'Pending KYC', pending_kyc_reviews_path %> - Review submitted documents</li>
