--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -109,16 +109,14 @@
         </div>
     <% end %>
 
-    <%#= render partial: 'editable_image_subform', locals: { ad: @ad, form: f } %>
+    <div class="u-push-down">
+        <%= render partial: 'shared/image_uploader', locals: { ad: @ad } %>
+        <div data-controller="imageSubformController" data-url="<%= nested_images_ad_path @ad %>">
+            <%= render partial: 'editable_image_subform', locals: { ad: @ad, form: f } %>
+        </div>
+    </div>
 
 <%- end -%>
-
-<div class="u-push-down">
-    <%= render partial: 'shared/image_uploader', locals: { ad: @ad } %>
-    <%= render partial: 'shared/image_manager', locals: { ad: @ad } %>
-</div>
-
-
 
 <div class="u-push-down">
     <% if @ad.published? %>
